# aftab-cfi-pla

./: .gitignore  README.md  riscv-opc.c  riscv-opc.h
sw/apps/embench/: CMakeLists.txt
sw/apps/embench/aha-mont64/: CMakeLists.txt
sw/apps/embench/crc32/: CMakeLists.txt
sw/apps/embench/cubic/: CMakeLists.txt  libcubic.c  snipmath.h
sw/apps/embench/edn/: CMakeLists.txt
sw/apps/embench/huffbench/: CMakeLists.txt
sw/apps/embench/matmult-int/: CMakeLists.txt
sw/apps/embench/md5sum/: CMakeLists.txt  md5.c
sw/apps/embench/minver/: CMakeLists.txt
sw/apps/embench/nbody/: CMakeLists.txt
sw/apps/embench/nettle-aes/: CMakeLists.txt
sw/apps/embench/nettle-sha256/: CMakeLists.txt
sw/apps/embench/nsichneu/: CMakeLists.txt
sw/apps/embench/picojpeg/: CMakeLists.txt
sw/apps/embench/primecount/: CMakeLists.txt
sw/apps/embench/qrduino/: CMakeLists.txt
sw/apps/embench/sglib-combined/: CMakeLists.txt
sw/apps/embench/slre/: CMakeLists.txt
sw/apps/embench/st/: CMakeLists.txt
sw/apps/embench/statemate/: CMakeLists.txt
sw/apps/embench/tarfind/: CMakeLists.txt
sw/apps/embench/ud/: CMakeLists.txt
sw/apps/embench/wikisort/: CMakeLists.txt
sw/apps/embench_mod/: CMakeLists.txt
sw/apps/embench_mod/aha-mont64_mod/: CMakeLists.txt  aha-mont64.list_config_mem_words.txt  aha-mont64_mod.s
sw/apps/embench_mod/crc32_mod/: CMakeLists.txt  crc32.list_config_mem_words.txt  crc32_mod.s
sw/apps/embench_mod/cubic_mod/: CMakeLists.txt  cubic.list_config_mem_words.txt  cubic_mod.s
sw/apps/embench_mod/edn_mod/: CMakeLists.txt  edn.list_config_mem_words.txt  edn_mod.s
sw/apps/embench_mod/huffbench_mod/: CMakeLists.txt  huffbench.list_config_mem_words.txt  huffbench_mod.s
sw/support/: CMakeLists.txt
sw/support/inc/: boardsupport.h  support.h
sw/support/src/: chip.c  main.c
(+149 files in other folders)
