add_subdirectory(aha-mont64)
add_subdirectory(crc32)
add_subdirectory(cubic)
add_subdirectory(edn)
add_subdirectory(huffbench)
add_subdirectory(matmult-int)
add_subdirectory(md5sum)
add_subdirectory(minver)
add_subdirectory(nbody)
add_subdirectory(nettle-aes)
add_subdirectory(nettle-sha256)
add_subdirectory(nsichneu)
add_subdirectory(picojpeg)
add_subdirectory(primecount)
add_subdirectory(qrduino)
add_subdirectory(sglib-combined)
add_subdirectory(slre)
add_subdirectory(st)
add_subdirectory(statemate)
add_subdirectory(tarfind)
add_subdirectory(ud)
add_subdirectory(wikisort)