add_subdirectory(aha-mont64_mod)
add_subdirectory(crc32_mod)
add_subdirectory(cubic_mod)
add_subdirectory(edn_mod)
add_subdirectory(huffbench_mod)
add_subdirectory(matmult-int_mod)
add_subdirectory(md5sum_mod)
add_subdirectory(minver_mod)
add_subdirectory(nbody_mod)
add_subdirectory(nettle-aes_mod)
add_subdirectory(nettle-sha256_mod)
add_subdirectory(nsichneu_mod)
add_subdirectory(picojpeg_mod)
add_subdirectory(primecount_mod)
add_subdirectory(qrduino_mod)
add_subdirectory(sglib-combined_mod)
add_subdirectory(slre_mod)
add_subdirectory(st_mod)
add_subdirectory(statemate_mod)
add_subdirectory(tarfind_mod)
add_subdirectory(ud_mod)
add_subdirectory(wikisort_mod)